# BeatBoss

./: .gitignore  ADDONS.md  LINUX_BUILD.md  README.md  SPEC.md  analysis_auth_fix.txt  analysis_final.txt  analysis_final_utf8.txt  analysis_output.txt  analysis_output_utf8.txt  analysis_storage.txt  analysis_storage_utf8.txt  analyze_library.py  backup.py  beatboss.spec  beatboss_ffmpeg.iss  beatboss_linux.spec  build_appimage.sh  build_deb.sh  build_linux_appimage.bat  build_linux_deb.bat  build_wasm_final.txt  build_wasm_final_2.txt  build_wasm_final_2_utf8.txt  build_wasm_final_utf8.txt  build_windows.bat  clean_rebuild.bat  cloudflare_worker.js  distribute_options.yaml  flet_rebuild.bat  help_build_web_utf8.txt  help_build_web_verbose.txt  help_build_web_verbose_utf8.txt  main_build.py  main_ffmpeg.py  main_flet.py  main_linux.py  monochrome_api_dump.txt  monochrome_samidy_urls.txt  player.py  (+6 more)
.github/workflows/: build-private.yml  linux-build.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
assets/: README.json
installers/: beatboss.iss
lib/: main.dart  media_kit_stub.dart
lib/core/models/: addon_models.dart  models.dart
lib/core/theme/: app_theme.dart
lib/features/: app_shell.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
src/: main.py  media_controls.py  player.py  settings.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+70 files in other folders)
